<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/default_padding_top"
        android:paddingBottom="@dimen/default_padding"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/username"
            android:background="@drawable/edit_text_rounded_corners_borders" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_rounded_corners_borders" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@android:color/transparent"
            android:text="@string/sign_up_solicitation" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</layout>

