<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data
        >
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.models.ShoeViewModel" />
      <variable
            name="shoe"
           type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- Constraint Layout because I prefer to have the items place set in place but still adjust with the size of the screen -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/shoe_details_header"
            style="@style/Headers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_details_header"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="384dp"
            android:layout_height="498dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_details_header">

<!--Constraint layout used because there are a few widgets-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/sub_header"
                    android:layout_width="138dp"
                    android:layout_height="28dp"
                    android:text="@string/shoe_name"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.745" />

                <EditText
                    android:id="@+id/shoe_name"
                    android:layout_width="238dp"
                    android:layout_height="53dp"
                    android:ems="10"
                    android:hint="@string/enter_shoe_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@={shoeViewModel.shoe.name}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.567" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--Constraint layout used because there are a few widgets-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/sub_header"
                    android:layout_width="138dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:text="@string/company_name"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.716" />

                <EditText
                    android:id="@+id/company_name"
                    android:layout_width="249dp"
                    android:layout_height="49dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_company_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@={shoeViewModel.shoe.company}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.578" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--Constraint layout used because there are a few widgets-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/sub_header"
                    android:layout_width="138dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/shoe_size"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.732" />

                <EditText
                    android:id="@+id/shoe_size"
                    android:layout_width="238dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_shoe_size"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@{Double.toString(shoeViewModel.shoe.size)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.644" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--Constraint layout used because there are a few widgets-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/sub_header"
                    android:layout_width="146dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/description"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.691" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="257dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/enter_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|text"
                    android:text="@={shoeViewModel.shoe.description}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--Constraint layout used because there are a few widgets-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/textView"
                    style="@style/sub_header"
                    android:layout_width="142dp"
                    android:layout_height="37dp"
                    android:text="@string/image_url"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.666" />

                <EditText
                    android:id="@+id/image_url_text"
                    android:layout_width="230dp"
                    android:layout_height="65dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:hint="@string/enter_image_url"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|text"
                    android:text="@={shoeViewModel.url}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.652"
                    tools:ignore="NotSibling" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/save"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.558" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>